@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-18T16:23:08Z",
+  "timestamp" : "2022-05-19T08:20:06Z",
   "count_outdated" : 264,
   "uniques_outdated" : 142,
-  "count" : 305,
-  "uniques" : 168,
+  "count" : 306,
+  "uniques" : 169,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
