@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 13,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
