@@ -1,3 +1,10 @@
+2022-05-19T08:20:06Z:
+* notice: last 14d: unq all: 13 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 142 264 / 168 305
+* notice: next accum: outdated-unq outdated-all / unq all: 142 264 / 169 306
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-19]
+
 2022-05-18T16:23:08Z:
 * notice: last 14d: unq all: 13 41
 * notice: prev accum: outdated-unq outdated-all / unq all: 142 264 / 168 304
